fixed my created action and show action

--- a/src/views/<header class="header-area clearfix">.html
+++ b/src/views/<header class="header-area clearfix">.html
@@ -49,7 +49,7 @@
                   <div class="main-menu">
                       <nav>
                           <ul>
-                              <li><a href="/listings">Home <i class="fa fa-angle-down"></i></a>
+                              <li><a href="/listings"> <i class="fa fa-angle-down"></i></a>
                                   <ul class="mega-menu mega-menu-padding">
                         
                                   </ul>
